--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,7 @@
 <app-global-error></app-global-error>
 
-<div class = "max-w-2xl container mx-auto pt-5">
+<app-navigation></app-navigation>
 
-<h1 class = "font-bold mb-2 text-center text-lg">{{ title | titlecase }}</h1>
-
-<input
-    type="text"
-    class="mb-2 border py-2 px-4 w-full"
-    placeholder="Filter products..."
-    [(ngModel)] = "term"
->
-
-
-    <div *ngIf="products$ | async as products">
-        <!--<app-product [product]="products[0]"></app-product>-->
-        <!--<app-product [product]="products[1]"></app-product>-->
-        <p *ngIf="loading" class = "text-center text-lg">Loading...</p>
-        <app-product 
-            *ngFor="let product of products | filterProducts:term; let i = index" 
-            [product]="product"
-        ></app-product>
-    </div>
+<div class = "max-w-2xl container mx-auto pt-5 mt-[50px]">
+    <router-outlet></router-outlet>
 </div>
